Fixed collapsing navbar on mobile

--- a/CSS_Styles/styles.css
+++ b/CSS_Styles/styles.css
@@ -121,6 +121,18 @@ p{
   text-align: center;
 
 }
+/* Listen Here Section */
+.Listen{
+  background-color: #2E3178;
+  padding: 0 10% 2% 10%;
+
+}
+
+.Listen-Title{
+  padding: 2%;
+}
+
+
 /* Footer */
 
 
